[gd_scene load_steps=7 format=3 uid="uid://cx2q7fucaf2tg"]

[ext_resource type="Texture2D" uid="uid://cijkhbr5ay641" path="res://img/popup.png" id="1_g3y4y"]
[ext_resource type="Texture2D" uid="uid://d00atl8axer4m" path="res://img/button.png" id="2_n85wc"]
[ext_resource type="Script" path="res://pop_up.gd" id="2_sq440"]
[ext_resource type="FontFile" uid="uid://cj5kipumd5mdm" path="res://fonts/Chicle-Regular.ttf" id="3_2a4i3"]

[sub_resource type="LabelSettings" id="LabelSettings_1hi32"]
font = ExtResource("3_2a4i3")
font_size = 90

[sub_resource type="LabelSettings" id="LabelSettings_43wlt"]
font = ExtResource("3_2a4i3")
font_size = 125

[node name="PopUp" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_g3y4y")
script = ExtResource("2_sq440")

[node name="HFlowContainer" type="HFlowContainer" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 925.0
offset_right = 1737.0
offset_bottom = 1075.0
theme_override_constants/h_separation = 300
alignment = 1

[node name="Button1" type="TextureButton" parent="HFlowContainer"]
layout_mode = 2
texture_normal = ExtResource("2_n85wc")

[node name="Label" type="Label" parent="HFlowContainer/Button1"]
layout_mode = 0
offset_right = 462.0
offset_bottom = 150.0
text = "Salir"
label_settings = SubResource("LabelSettings_1hi32")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="TextureButton" parent="HFlowContainer"]
layout_mode = 2
texture_normal = ExtResource("2_n85wc")

[node name="Label" type="Label" parent="HFlowContainer/Button2"]
layout_mode = 0
offset_right = 462.0
offset_bottom = 150.0
text = "Siguiente"
label_settings = SubResource("LabelSettings_1hi32")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 225.0
offset_right = 1737.0
offset_bottom = 385.0
text = "Â¡HAS GANADO!"
label_settings = SubResource("LabelSettings_43wlt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 385.0
offset_right = 1737.0
offset_bottom = 916.0
theme_override_fonts/normal_font = ExtResource("3_2a4i3")
theme_override_fonts/bold_font = ExtResource("3_2a4i3")
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "[center]
[b]NIVEL 1[/b]
[/center]"

[connection signal="pressed" from="HFlowContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="HFlowContainer/Button2" to="." method="_on_button_2_pressed"]
